--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ngx-bootstrap": "^18.0.2",
+    "remixicon": "^4.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
